--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,64 +10,213 @@ on:
     branches:
       - main
 
+# Prevent concurrent deployments to avoid race conditions
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+
+# Security: Restrict default permissions (least-privilege principle)
+permissions:
+  contents: read
+  pull-requests: write
+  checks: write
+
 jobs:
-  build-and-test:
-    name: Build and Test
+  # ============================================
+  # JOB 1: Continuous Integration (CI)
+  # Runs on ALL pushes and PRs
+  # ============================================
+  ci:
+    name: Continuous Integration
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     strategy:
       matrix:
         node-version: [20.x]
 
     steps:
-      # Step 1: Checkout code
-      - name: Checkout repository
+      # ──────────────────────────────────────
+      # STEP 1: Checkout Code
+      # ──────────────────────────────────────
+      - name: 📥 Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Full history for better debugging
 
-      # Step 2: Setup Node.js
-      - name: Setup Node.js ${{ matrix.node-version }}
+      # ──────────────────────────────────────
+      # STEP 2: Setup Node.js with Caching
+      # ──────────────────────────────────────
+      - name: ⚙️ Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      # Step 3: Install dependencies
-      - name: Install dependencies
+      # ──────────────────────────────────────
+      # STEP 3: Install Dependencies
+      # ──────────────────────────────────────
+      - name: 📦 Install dependencies
         run: npm ci
+        env:
+          # Prevent npm from sending telemetry
+          NPM_CONFIG_AUDIT: false
 
-      # Step 4: Run linting
-      - name: Run ESLint
+      # ──────────────────────────────────────
+      # STEP 4: Code Quality - Linting
+      # ──────────────────────────────────────
+      - name: 🔍 Run ESLint
         run: npm run lint
+        continue-on-error: false
 
-      # Step 5: Build application
-      - name: Build application
+      # ──────────────────────────────────────
+      # STEP 5: Type Checking (implicit in build)
+      # ──────────────────────────────────────
+      - name: 🏗️ Build application
         run: npm run build
+        env:
+          # Optimize build for CI
+          NODE_ENV: production
+          NEXT_TELEMETRY_DISABLED: 1
 
-      # Step 6: Check for build artifacts
-      - name: Verify build output
+      # ──────────────────────────────────────
+      # STEP 6: Verify Build Artifacts
+      # ──────────────────────────────────────
+      - name: ✅ Verify build output
         run: |
           if [ ! -d ".next" ]; then
-            echo "Error: Build output directory not found"
+            echo "❌ Error: Build output directory not found"
             exit 1
           fi
-          echo "Build successful - .next directory exists"
+          echo "✅ Build successful - .next directory exists"
+          ls -lah .next
 
-  # Summary job that depends on build-and-test
+      # ──────────────────────────────────────
+      # STEP 7: Install Playwright Browsers
+      # (Only if tests will run)
+      # ──────────────────────────────────────
+      - name: 🎭 Install Playwright Browsers
+        run: npx playwright install --with-deps chromium
+        if: github.event_name == 'pull_request'
+
+      # ──────────────────────────────────────
+      # STEP 8: Run E2E Tests (PR only)
+      # ──────────────────────────────────────
+      - name: 🧪 Run E2E tests
+        run: |
+          npm run build
+          npx playwright test
+        if: github.event_name == 'pull_request'
+        continue-on-error: false
+
+      # ──────────────────────────────────────
+      # STEP 9: Upload Test Results (on failure)
+      # ──────────────────────────────────────
+      - name: 📊 Upload test results
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 7
+
+      # ──────────────────────────────────────
+      # STEP 10: Security Audit (Advisory only)
+      # ──────────────────────────────────────
+      - name: 🔒 Security audit
+        run: npm audit --audit-level=high
+        continue-on-error: true  # Don't fail pipeline, just warn
+
+      # ──────────────────────────────────────
+      # STEP 11: CI Summary
+      # ──────────────────────────────────────
+      - name: 📋 CI Summary
+        if: always()
+        run: |
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "📊 CI Pipeline Summary"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "✅ Lint: Passed"
+          echo "✅ Build: Passed"
+          echo "✅ Verification: Passed"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+
+  # ============================================
+  # JOB 2: Continuous Deployment (CD)
+  # Runs ONLY on main branch after CI passes
+  # ============================================
+  deploy:
+    name: Deploy to Vercel
+    runs-on: ubuntu-latest
+    needs: ci
+    # Only deploy on main branch pushes (not PRs)
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    timeout-minutes: 10
+
+    # Production environment
+    environment:
+      name: production
+      url: https://digambar-portfolio.vercel.app
+
+    steps:
+      - name: 🚀 Deployment Status
+        run: |
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "🚀 Deploying to Production"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "Branch: ${{ github.ref_name }}"
+          echo "Commit: ${{ github.sha }}"
+          echo "Author: ${{ github.actor }}"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo ""
+          echo "✅ CI checks passed"
+          echo "✅ Vercel will auto-deploy from main branch"
+          echo ""
+          echo "📍 Deployment URL: https://digambar-portfolio.vercel.app"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+
+  # ============================================
+  # JOB 3: Pipeline Status Summary
+  # Always runs to provide final status
+  # ============================================
   pipeline-status:
     name: Pipeline Status
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: [ci, deploy]
     if: always()
+    timeout-minutes: 5
 
     steps:
-      - name: Check pipeline status
+      - name: 📊 Check pipeline status
         run: |
-          if [ "${{ needs.build-and-test.result }}" == "failure" ]; then
-            echo "❌ Pipeline failed - Build or lint errors detected"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "📊 Final Pipeline Status"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          
+          CI_STATUS="${{ needs.ci.result }}"
+          DEPLOY_STATUS="${{ needs.deploy.result }}"
+          
+          echo "CI Job: $CI_STATUS"
+          echo "Deploy Job: $DEPLOY_STATUS"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          
+          if [ "$CI_STATUS" == "failure" ]; then
+            echo "❌ Pipeline failed - CI checks did not pass"
+            echo "   → Fix linting or build errors"
             exit 1
-          elif [ "${{ needs.build-and-test.result }}" == "success" ]; then
-            echo "✅ Pipeline passed - Ready for deployment"
+          elif [ "$CI_STATUS" == "success" ]; then
+            if [ "$DEPLOY_STATUS" == "success" ] || [ "$DEPLOY_STATUS" == "skipped" ]; then
+              echo "✅ Pipeline completed successfully"
+              if [ "${{ github.event_name }}" == "pull_request" ]; then
+                echo "   → PR is ready for review"
+              else
+                echo "   → Deployment triggered to production"
+              fi
+            else
+              echo "⚠️ CI passed but deployment had issues"
+              exit 1
+            fi
           else
-            echo "⚠️ Pipeline status: ${{ needs.build-and-test.result }}"
+            echo "⚠️ Pipeline status: $CI_STATUS"
             exit 1
           fi
